--- a/My-Habitat/src/app/otp/otp.component.html
+++ b/My-Habitat/src/app/otp/otp.component.html
@@ -1,22 +1,21 @@
+<div class="otp-container">
 
-<div  style="width: 100%;  height:100%">
-    <div></div>
-    <div>
-        <div class="container col-md-12" id="main">
-          <div class="row" style="display:inline-block ;">
-            <div class="col-md-3">
-                <input type="text" maxlength="1">
-            </div>
-            <div class="col-md-3">
-                <input type="text" maxlength="1">
-            </div>
-            <div class="col-md-3">
-                <input type="text" maxlength="1">
-            </div>
-            <div class="col-md-3">
-                <input type="text" maxlength="1">
-            </div>
-          </div>
-        </div>
+    <div class="d-flex justify-content-between p-3">
+        <span class="header-label"><a routerLink="../PhoneNuber">Back</a></span>
+        <span class="header-label">Recovery</span>
+        <span class="header-label">X</span>
+    </div>
+
+    <div class="d-flex flex-column midle-container p-4">
+        <div class="title-label mb-2">Enter recovery code</div>
+        <div class="description-label"> We have sent it on your mobile</div>
+        <mat-form-field appearance="outline" class="mt-4">
+            <input matInput [type]="hide ? 'password' : 'text'" placeholder="Verification Code">
+            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+                [attr.aria-pressed]="hide">
+                <mat-icon> {{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+        </mat-form-field>
+
     </div>
 </div>
