--- a/My-Habitat/src/app/otp/otp.component.scss
+++ b/My-Habitat/src/app/otp/otp.component.scss
@@ -1,5 +1,20 @@
-.main{display: flex;
-flex-wrap: wrap;}
+.otp-container {
+  height: 30%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-image: url('https://img.freepik.com/free-vector/colorful-palm-silhouettes-background_23-2148541792.jpg?w=2000');
+}
 
-.col-md-3{flex:1 0 21%;
-margin: 5px;}
+
+.midle-container {
+  border-radius: 25px;
+  box-shadow: 0px -10px 15px #33333333;
+  padding: 16px;
+  position: fixed;
+  top: 28%;
+  bottom: 00%;
+  left: 0%;
+  right: 0%; 
+  background-color: #f2f2f2;   
+}
