--- a/My-Habitat/src/app/sign-in/sign-in.component.html
+++ b/My-Habitat/src/app/sign-in/sign-in.component.html
@@ -10,7 +10,7 @@
                        <input type="text" formControlName="name" id="name" placeholder="full name">
                      </div>
                      <div class="form-group mt-2" style="text-align: left ;">
-                        <label for="num">Phone Number</label>
+                        <label for="num">Phone X Number</label>
                         <input type="number" formControlName="num" id="num" placeholder="Your mobile Number">
                       </div>
                       <div class="form-group mt-2" style="text-align: left ;">
