commit otp component

--- a/My-Habitat/src/app/phone-nuber/phone-nuber.component.html
+++ b/My-Habitat/src/app/phone-nuber/phone-nuber.component.html
@@ -21,8 +21,7 @@
       </mat-form-field>
 
       <div class="flex-grow-1 align-items-end d-flex w-100">
-        <button mat-flat-button color="primary" [disabled]="!loginFormGroup.valid" class="w-100">Send Verification
-          Code</button>
+        <button mat-flat-button color="primary" [disabled]="!loginFormGroup.valid" class="w-100">Send Verification Code</button>
       </div>
 
     </div>
