--- a/My-Habitat/src/my-habitat-palette.scss
+++ b/My-Habitat/src/my-habitat-palette.scss
@@ -1,24 +1,26 @@
 /* For use in src/lib/core/theming/_palette.scss */
 $my-habitat-primary-palette: (
-    50 : #e1eaed,
-    100 : #b4cbd1,
-    200 : #83a9b3,
-    300 : #518795,
-    400 : #2b6d7e,
-    500 : #065367,
-    600 : #054c5f,
-    700 : #044254,
-    800 : #03394a,
-    900 : #022939,
-    A100 : #6fceff,
-    A200 : #3cbdff,
-    A400 : #09abff,
-    A700 : #009def,
+    50 : #ebecf6,
+    100 : #cdd0e8,
+    200 : #abb0d9,
+    300 : #8990c9,
+    400 : #7079be,
+    500 : #5761b2,
+    600 : #4f59ab,
+    700 : #464fa2,
+    800 : #3c4599,
+    900 : #ea826b,
+    1000: #1FC5AB,
+    1100 : #000C64,
+    A100 : #ced2ff,
+    A200 : #9ba3ff,
+    A400 : #6874ff,
+    A700 : #4f5cff,
     contrast: (
-        50 : #000000,
+        50 :  #000000,
         100 : #000000,
         200 : #000000,
-        300 : #ffffff,
+        300 : #000000,
         400 : #ffffff,
         500 : #ffffff,
         600 : #ffffff,
