--- a/My-Habitat/src/app/otp/otp.component.html
+++ b/My-Habitat/src/app/otp/otp.component.html
@@ -1,11 +1,11 @@
 <div class="otp-container">
 
     <div class="d-flex justify-content-between p-3">
-        <span class="header-label"><a routerLink="../PhoneNuber">Back</a></span>
+        <span class="header-label" routerLink="../PhoneNuber">Back</span>
         <span class="header-label">Recovery</span>
-        <span class="header-label">X</span>
+        <span class="header-label" routerLink="../Noticeboard"> X</span>
     </div>
-
+    
     <div class="d-flex flex-column midle-container p-4">
         <div class="title-label mb-2">Enter recovery code</div>
         <div class="description-label"> We have sent it on your mobile</div>
@@ -13,7 +13,7 @@
             <input matInput [type]="hide ? 'password' : 'text'" placeholder="Verification Code">
             <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                 [attr.aria-pressed]="hide">
-                <mat-icon> {{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                <mat-icon class="customIconSize"> {{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
         </mat-form-field>
 
