--- a/My-Habitat/src/theme/label/_label-theme.scss
+++ b/My-Habitat/src/theme/label/_label-theme.scss
@@ -6,10 +6,11 @@
 
     $primary-palette: map.get($color-config, 'primary');
 
-
+    .opacity-label,
     .title-label,
     .description-label,
-    .header-label {
+    .header-label,
+    .paragraph-label {
         color: mat.get-color-from-palette($primary-palette, 500) !important;
     }
 
@@ -30,6 +31,13 @@
     .header-label {
         font-weight: 700 !important;
         font-size: 18px !important;
+    }
+    .paragraph-label{
+        font-weight: 500 !important;
+        font-size: 14px !important;
+    }
+    .opacity-label{
+        opacity: 0.63;
     }
 }
 
