--- a/My-Habitat/src/app/home/home.component.scss
+++ b/My-Habitat/src/app/home/home.component.scss
@@ -1,3 +1,33 @@
 .home-container{
-    height: 130px;
+    height: 166px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url('https://img.freepik.com/free-vector/colorful-palm-silhouettes-background_23-2148541792.jpg?w=2000');
 }
+.profile-pic{ 
+    height: 36px;
+    width: 36px;
+    border-radius: 50%;
+}
+
+.middle-container{background-color:  #f2f2f2;
+position: fixed;
+box-shadow: 0px -10px 15px #33333333;
+padding: 16px;
+top:  150px;
+right: 0%;
+left: 0%;
+border-radius: 25px;
+}
+.span-background{background-color: white;
+flex-direction: column; 
+border-radius: 10px;
+height: 80px;
+width: 80px;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+ 
+.columncount{
+margin-left: 8px;}
