--- a/My-Habitat/src/theme/label/_label-theme.scss
+++ b/My-Habitat/src/theme/label/_label-theme.scss
@@ -5,7 +5,8 @@
     $color-config: mat.get-color-config($theme);
 
     $primary-palette: map.get($color-config, 'primary');
-
+     
+    .small-label,
     .opacity-label,
     .title-label,
     .description-label,
@@ -34,11 +35,15 @@
     }
     .paragraph-label{
         font-weight: 500 !important;
-        font-size: 14px !important;
+        font-size: 17px !important;
     }
     .opacity-label{
         opacity: 0.63;
     }
+    .small-label{
+        font-size: 14px !important;
+    }
+
 }
 
 @mixin theme($theme) {
