--- a/My-Habitat/src/app/home/home.component.scss
+++ b/My-Habitat/src/app/home/home.component.scss
@@ -17,6 +17,7 @@ padding: 16px;
 top:  150px;
 right: 0%;
 left: 0%;
+bottom: 0%;
 border-radius: 25px;
 }
 .span-background{background-color: white;
@@ -30,4 +31,4 @@ align-items: center;
 }
  
 .columncount{
-margin-left: 8px;}
+margin-left: 9px;}
