--- a/My-Habitat/src/app/otp/otp.component.html
+++ b/My-Habitat/src/app/otp/otp.component.html
@@ -1,12 +1,12 @@
-<div class="otp-container">
+<div class="full-otp-container">
 
-    <div class="d-flex justify-content-between p-3">
+    <div class="d-flex justify-content-between otp-container p-3">
         <span class="header-label" routerLink="../PhoneNuber">Back</span>
-        <span class="header-label">Recovery</span>
+        <span class="header-label" routerLink="../Terms">Recovery</span>
         <span class="header-label" routerLink="../Noticeboard"> X</span>
     </div>
     
-    <div class="d-flex flex-column midle-container p-4">
+    <div class="d-flex flex-column midle-container p-3">
         <div class="title-label mb-2">Enter recovery code</div>
         <div class="description-label"> We have sent it on your mobile</div>
         <mat-form-field appearance="outline" class="mt-4">
