--- a/My-Habitat/src/app/page-not-found/page-not-found.component.html
+++ b/My-Habitat/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,5 @@
 <p>Sorry go back to homepage</p>
+<div class="imgHolder">
+    <img src="https://www.google.com/images/srpr/logo11w.png" />
+    <span>Here's the overlay text</span>
+</div>
