--- a/My-Habitat/src/app/profile/profile.component.html
+++ b/My-Habitat/src/app/profile/profile.component.html
@@ -1,18 +1,18 @@
 <div class="">
    <div class="top-conatainer ">
       <div  class="d-flex justify-content-between  p-3" >
-          <span class="header-label" routerLink="../Home">Back</span>
-          <span class="header-label">Profile</span>
-          <span></span>
+         <span class="header-label" routerLink="../Home">Back</span>
+         <span class="header-label">Profile</span>
+         <span></span>
       </div>
   </div>
-  <div class="bottom-container ">
+  <div class="bottom-container">
     <div class="img-center"><img  class="circular-img" src="http://bluegalaxy.info/images/sea_captain.jpg"></div>
     <div class="user-info">
           <div class="header-label ">Ali Mubarak</div>
           <div class=" faded-mail">ali@mailinator.com</div>
     </div>
-       <div class="  middle-container  ">
+      <div class="  middle-container  ">
            <div class="d-flex justify-content-between p-3 items">
               <span class="flex-item">logo</span>
               <span class="subcontainer "><div class="sub-label  ">Edit Profile</div><div class="smallest-label ">Lorem ipsum dolor sit amet, consetetur</div></span>
@@ -33,8 +33,8 @@
             <span class="subcontainer"><div class="sub-label ">Settings</div><div class="smallest-label flex-item">Lorem ipsum dolor sit amet, consetetur</div></span>
             <span  class="flex-item">mark</span>
          </div>        
-       </div>
-       <div class="scrollbar"></div><br> 
+      </div>
+      <br> 
 
      <div class=" middle-container ">
         <div class="d-flex justify-content-between p-3 items">
@@ -49,10 +49,9 @@
        </div>        
        <div class="d-flex justify-content-between p-3 items">
          <span  class="flex-item">logo</span>
-         <span class="subcontainer"><div class=" ">Log Out</div></span>
+         <span class=""><button mat-stroked-button class="filter-btn warn ms-1">LogOut</button></span>
          <span  class="flex-item">mark</span>
       </div>         
      </div>
-     <div class="scrollbar"></div>
-  </div>
+ </div>
 </div> 
