--- a/My-Habitat/src/app/home/home.component.scss
+++ b/My-Habitat/src/app/home/home.component.scss
@@ -11,7 +11,7 @@
 }
 
 .middle-container{background-color:  #f2f2f2;
-position: fixed;
+    margin-top: -20px;
 box-shadow: 0px -10px 15px #33333333;
 padding: 16px;
 top:  150px;
@@ -23,8 +23,8 @@ border-radius: 25px;
 .span-background{background-color: white;
 flex-direction: column; 
 border-radius: 10px;
-height: 80px;
-width: 80px;
+height: 70px;
+width: 70px;
 display: flex;
 justify-content: center;
 align-items: center;
