--- a/My-Habitat/src/app/otp/otp.component.scss
+++ b/My-Habitat/src/app/otp/otp.component.scss
@@ -1,7 +1,6 @@
 .otp-container {
-  height: 30%;
+  height: 166px;
   background-repeat: no-repeat;
-  background-attachment: fixed;
   background-size: cover;
   background-image: url('https://img.freepik.com/free-vector/colorful-palm-silhouettes-background_23-2148541792.jpg?w=2000');
 }
@@ -11,11 +10,11 @@
   border-radius: 25px;
   box-shadow: 0px -10px 15px #33333333;
   padding: 16px;
-  position: fixed;
-  top: 28%;
-  bottom: 00%;
+  top: 150px;
+  height: 100%;
   left: 0%;
   right: 0%; 
+  margin-top: -15px;
   background-color: #f2f2f2;   
 }
 
@@ -24,3 +23,4 @@
   height: 50px ;
   width: 50px ;
 }
+
