--- a/My-Habitat/src/app/resident/resident.component.html
+++ b/My-Habitat/src/app/resident/resident.component.html
@@ -8,7 +8,7 @@
     <div class="bottom-container p-3">
         <div class="d-flex justify-content-between align-items-center">
             <span class="sub-heading-label">My Family</span>
-            <span> <button mat-button class="mat-button-small">ADD FAMILY</button></span>
+            <span> <button mat-button class="mat-button-small "  routerLink="../AddFamily">ADD FAMILY</button></span>
         </div>
         <div class="d-flex flex-wrap justify-content-between">
             <div *ngFor="let member of members"
