--- a/My-Habitat/src/app/otp/otp.component.scss
+++ b/My-Habitat/src/app/otp/otp.component.scss
@@ -11,11 +11,11 @@
   box-shadow: 0px -10px 15px #33333333;
   padding: 16px;
   top: 150px;
-  height: 100%;
   left: 0%;
   right: 0%; 
   margin-top: -15px;
   background-color: #f2f2f2;   
+  height: 500px;
 }
 
 .customIconSize {
