--- a/My-Habitat/src/app/society-issue/society-issue.component.scss
+++ b/My-Habitat/src/app/society-issue/society-issue.component.scss
@@ -6,7 +6,8 @@
    border-width: 2px;
 } 
 .flex-container{background-color: white;
-    padding-top: 10px;
+ padding-top: 10px;
      margin-right: 20px;
      margin-left: 20px;   
-     border-radius: 10px;}
+  border-radius: 10px;
+}
