--- a/My-Habitat/src/theme/form-field/_form-field-theme.scss
+++ b/My-Habitat/src/theme/form-field/_form-field-theme.scss
@@ -14,6 +14,12 @@
     .mat-form-field {
         font-size: 20px !important;
     }
+
+.mat-family-memberName{
+    font-size: 17px !important; 
+    border: 30px  !important ;
+}
+
 }
 
 @mixin theme($theme) {
