--- a/My-Habitat/src/theme/label/_label-theme.scss
+++ b/My-Habitat/src/theme/label/_label-theme.scss
@@ -67,6 +67,10 @@
         font-size: 17px !important;
         font-weight: 600 !important;
     }
+    .sub-mini-label{
+        font-size: 15px !important;
+        font-weight: 400 !important;
+    }
     
 }
 
