--- a/src/app/society/presentation/ui/notices/noticeboard.component.html
+++ b/src/app/society/presentation/ui/notices/noticeboard.component.html
@@ -1,49 +1,30 @@
-<div class="notice-container">
+<div class="notice-container pb-3">
     <div class="d-flex justify-content-between p-3 ">
         <span class="header-label">Back</span>
         <span class="header-label">Noticeboard</span>
         <span class="header-label" routerLink="../Home">plus</span>
     </div>
     <hr class="hr">
-    <div class="pb-3">
+    <div class="px-3 py-2">
         <button mat-stroked-button class="filter-btn active ms-1 "><b>All</b></button>
-        <button mat-stroked-button class="filter-btn  ms-1"> Society issue</button>
+        <button mat-stroked-button class="filter-btn  ms-1"> Society</button>
         <button mat-stroked-button class="filter-btn  ms-1">Payment</button>
-        <button mat-stroked-button class="filter-btn ms-1">Listing</button>
     </div>
-    <div class="flex-container">
-        <div class="d-flex justify-content-between px-3 align-items-center">
-            <span><small><button mat-stroked-button class="filter-btn ms-1"  routerLink="../SocietyIssue">Society Issue</button></small></span>
-            <span class="opacity-label">30-feb-2023</span>
-        </div>
-        <hr>
-        <div class="d-flex flex-column p-3">
-            <div class="header-label">Vaccinatiion for 16 years and above
+
+    <ng-container *ngFor="let notice of (society$ | async)?.notices">
+        <div class="flex-container p-3 m-3">
+            <div class="d-flex justify-content-between align-items-center">
+                <div *ngIf="notice.tag">
+                    <span><small><button mat-stroked-button class="filter-btn">{{notice.tag}}</button></small></span>
+                </div>
+                <span class="opacity-label">{{notice.createdAt | date:'short'}}</span>
             </div>
-            <p class="mt-2 paragraph-label">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-                cupiditate quis
-                modi quos quaerat? Nam recusandae minima a illum cum. Odio dolores et amet libero voluptates tempore
-                veniam ipsa!</p>
+            <hr>
+            <p class="mt-2" [innerHTML]="notice.text"></p>
         </div>
-    </div> <br>
-    <div class="flex-container">
-        <div class="d-flex justify-content-between px-3 align-items-center">
-            <span><small><button mat-stroked-button class="filter-btn ms-1" routerLink="../SocietyIssue">Society Issue</button></small></span>
-            <span  class="opacity-label">30-feb-2023</span>
-        </div>
-        <hr>
-        <div class="d-flex flex-column p-3">
-            <div class="header-label">Vaccinatiion for 16 years and above
-            </div>
-            <p class="mt-2 paragraph-label">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-                cupiditate quis
-                modi quos quaerat? Nam recusandae minima a illum cum. Odio dolores et amet libero voluptates tempore
-                veniam ipsa!</p>
-        </div>
-    </div>
-    <br>
-    
-    <div class="flex-container">
+    </ng-container>
+
+    <!-- <div class="flex-container">
         <div class="d-flex justify-content-between px-3 align-items-center">
             <span><small><button mat-stroked-button class="filter-btn warn ms-1">Payment</button></small></span>
             <span class="opacity-label">30-feb-2023</span>
@@ -72,5 +53,5 @@
                 modi quos quaerat? Nam recusandae minima a illum cum. Odio dolores et amet libero voluptates tempore
                 veniam ipsa!</p>
         </div><br>
-    </div>
+    </div> -->
 </div>
