--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
  <div  class="d-flex 	justify-content-flex-start p-2">
         <span class="span-background columncount "> <div class="small-label">logo</div> <div class="small-label">Management</div></span>
         <span class="span-background columncount  "> <div class="small-label">logo</div> <div  class="small-label">Listings</div></span>
-        <span class="span-background  columncount "> <div class="small-label">logo</div> <div  class="small-label">Household</div></span>
+        <span class="span-background  columncount " routerLink="/home-owner"> <div class="small-label">logo</div> <div  class="small-label">Household</div></span>
         <span></span>
  </div>
 </div>
