--- a/src/app/home-owner/presentation/ui/resident/resident.component.html
+++ b/src/app/home-owner/presentation/ui/resident/resident.component.html
@@ -10,12 +10,12 @@
             <span class="sub-heading-label">My Family</span>
             <span> <button mat-button class="mat-button-small " routerLink="/AddFamily">ADD FAMILY</button></span>
         </div>
-        <div class="d-flex flex-wrap justify-content-start">
+        <div class="d-flex flex-wrap justify-content-start gap-3">
             <ng-container *ngFor="let member of (homeOwner$ | async)?.households">
-                <div class="p-1 d-flex flex-column align-items-center me-2"
+                <div class="p-1 d-flex flex-column align-items-center" style="width: 80px;"
                     *ngIf="member.type === 'FAMILY_ADULT' ||  member.type === 'FAMILY_KID'">
                     <img class="member-photo" src="http://bluegalaxy.info/images/sea_captain.jpg">
-                    <div class="small-label">{{member.name}}</div>
+                    <div class="small-label mt-1">{{member.name}}</div>
                     <div class="smallest-opacity-label">{{member.role}}</div>
                 </div>
             </ng-container>
@@ -23,7 +23,7 @@
         <hr class="">
         <div class="d-flex justify-content-between align-items-center">
             <span class="sub-heading-label">Daily Help</span>
-            <span> <button mat-button class="mat-button-small">ADD DAILY HELP</button></span>
+            <span> <button mat-button class="mat-button-small" (click)="openDailyHelp()">ADD DAILY HELP</button></span>
         </div>
         <ng-container *ngFor="let helper of (homeOwner$ | async)?.households" class="daily-helper d-flex p-2">
             <div class="daily-helper d-flex p-2" *ngIf="helper.type === 'DAILY_HELP'">
@@ -42,12 +42,11 @@
                 <span class="sub-heading-label">Frequent Visitors</span>
                 <span> <button mat-button class="mat-button-small">ADD VISITOR</button></span>
             </div>
-            <div class="d-flex flex-wrap justify-content-start">
+            <div class="d-flex flex-wrap justify-content-start  gap-3">
                 <ng-container *ngFor="let member of (homeOwner$ | async)?.households">
-                    <div class="p-1 d-flex flex-column align-items-center me-2"
-                        *ngIf="member.type === 'FREQUENT_VISITOR'">
+                    <div class="p-1 d-flex flex-column align-items-center" *ngIf="member.type === 'FREQUENT_VISITOR'">
                         <img class="member-photo" src="http://bluegalaxy.info/images/sea_captain.jpg">
-                        <div class="small-label">{{member.name}}</div>
+                        <div class="small-label mt-1">{{member.name}}</div>
                         <div class="smallest-opacity-label">{{member.role}}</div>
                     </div>
                 </ng-container>
