--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
  </div>
  <p class="mt-2 paragraph-label">Welcome to Bahrain's Smart Community <br>  Management System</p>
  <div  class="d-flex justify-content-flex-start p-2">
-        <span class="span-background columncount"> <div class="small-label">logo</div> <div class="small-label">Noticeboard</div></span>
+        <span class="span-background columncount" routerLink="/noticeboard"> <div class="small-label">logo</div> <div class="small-label">Noticeboard</div></span>
         <span class="span-background columncount"> <div class="small-label">logo</div> <div  class="small-label">Reservation</div></span>
         <span class="span-background columncount"> <div class="small-label">logo</div> <div  class="small-label">Payments</div></span>
         <span class="span-background columncount"> <div class="small-label">logo</div> <div  class="small-label">Kid Exit</div></span>
