--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
@@ -28,15 +27,12 @@ $My-Habitat-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$My-Habitat-theme: mat.define-light-theme((
-  color: (
-    primary: $My-Habitat-primary,
-    accent: $My-Habitat-accent,
-    warn: $My-Habitat-warn,
-  ),
-  typography: (), 
-  style: ()
-));
+$My-Habitat-theme: mat.define-light-theme((color: (primary: $My-Habitat-primary,
+        accent: $My-Habitat-accent,
+        warn: $My-Habitat-warn,
+      ),
+      typography: (),
+      style: ()));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -50,5 +46,18 @@ $My-Habitat-theme: mat.define-light-theme((
 @import "../node_modules/bootstrap/scss/bootstrap";
 
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+
+.mat-bottom-sheet-container {
+  padding: 0 !important;
+  border-radius: 20px 20px 0 0;
+}
