--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @use './theme/label/label-theme' as label;
 @use './theme/form-field/form-field-theme' as form-field;
 @use './theme/button/button-theme' as button;
+@use './theme/mat-chip/mat-chip-theme' as mat-chip;
 
 
 // Plus imports for other components in your app.
@@ -41,6 +42,7 @@ $My-Habitat-theme: mat.define-light-theme((color: (primary: $My-Habitat-primary,
 @include label.theme($My-Habitat-theme);
 @include form-field.theme($My-Habitat-theme);
 @include button.theme($My-Habitat-theme);
+@include mat-chip.theme($My-Habitat-theme);
 
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/bootstrap/scss/bootstrap";
@@ -60,4 +62,5 @@ body {
 .mat-bottom-sheet-container {
   padding: 0 !important;
   border-radius: 20px 20px 0 0;
+  max-height: 95vh !important;
 }
