--- a/src/app/society/presentation/ui/notices/noticeboard.component.html
+++ b/src/app/society/presentation/ui/notices/noticeboard.component.html
@@ -2,7 +2,7 @@
     <div class="d-flex justify-content-between p-3 ">
         <span class="header-label">Back</span>
         <span class="header-label">Noticeboard</span>
-        <span class="header-label" routerLink="../Home">plus</span>
+        <span class="header-label" routerLink="/home-owner">plus</span>
     </div>
     <hr class="hr">
     <div class="px-3 py-2">
