--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@
 
 
 // Plus imports for other components in your app.
-@import './my-habitat-palette.scss';
+@import './theme/my-habitat-palette.scss';
 @import './theme/label/label.scss';
 @import './theme/form-field/form-field.scss';
 
