--- a/src/my-habitat-palette.scss
+++ b/src/my-habitat-palette.scss
@@ -15,7 +15,7 @@ $my-habitat-primary-palette: (
     A100 : #ced2ff,
     A200 : #9ba3ff,
     A400 : #6874ff,
-    A700 : #4f5cff,
+    A700 : #eaff4f,
     contrast: (
         50 :  #000000,
         100 : #000000,
