--- a/src/theme/label/_label-theme.scss
+++ b/src/theme/label/_label-theme.scss
@@ -15,12 +15,19 @@
     .paragraph-label,
     .sub-label,
     .sub-heading-label,
-    .header2-label
-
+    .header2-label,
+    .smallest-yello-label
+    .opacity-mini-label
      {
         color: mat.get-color-from-palette($primary-palette, 500) !important;
-    }
+    };
+    
+    // $primary-palette: map.get($color-config, 'primary');
 
+    // .smallest-yello-label
+    // {        color: mat.get-color-from-palette($primary-palette, 700) !important;
+
+    // };
 }
 
 @mixin typography($theme) {
@@ -48,8 +55,14 @@
         font-size: 17px !important;
     }
     .opacity-label{
-        opacity: 0.63;
+        opacity: 0.63 !important;
     }
+    .opacity-mini-label{
+        opacity: 0.50 !important;
+        font-weight: 400 !important;
+        font-size: 12px !important;
+    }
+
     .small-label{
         font-size: 14px !important;
         font-weight: 600 !important;
@@ -72,6 +85,10 @@
         font-weight: 400 !important;
     }
     
+    .smallest-yello-label{
+        font-size: 10px !important;
+        font-weight: 700 !important;
+    }
 }
 
 @mixin theme($theme) {
