--- a/src/app/security-guard/presentation/ui/home/home.component.html
+++ b/src/app/security-guard/presentation/ui/home/home.component.html
@@ -6,7 +6,7 @@
     </div>
 </div>
 <div class="d-flex flex-column p-3  middle-container">
-    <div class="title-label">Hi, Ali
+    <div class="title-label">Hi, {{(securityGuard$ | async)?.truncatedName}}
     </div>
     <p class="mt-2 paragraph-label">Welcome to Bahrain's Smart Community <br> Management System</p>
     <div class="d-flex justify-content-flex-start flex-wrap p-2">
