kid exit and updated url

--- a/src/app/home-owner/presentation/ui/kid-exit/kid-exit.component.html
+++ b/src/app/home-owner/presentation/ui/kid-exit/kid-exit.component.html
@@ -32,6 +32,6 @@
             </div>
         </div>
 
-        <button mat-flat-button color="primary" class="mat-flat-button w-100">Allow Exit</button>
+        <button mat-flat-button color="primary" class="mat-flat-button w-100" (click)="allowExit()">Allow Exit</button>
     </div>
 </div>
