--- a/src/app/home-owner/presentation/ui/resident/resident.component.html
+++ b/src/app/home-owner/presentation/ui/resident/resident.component.html
@@ -15,7 +15,9 @@
             <ng-container *ngFor="let member of (homeOwner$ | async)?.households">
                 <div class="p-1 d-flex flex-column align-items-center" style="width: 80px;"
                     *ngIf="member.type === 'FAMILY_ADULT' ||  member.type === 'FAMILY_KID'">
-                    <img class="member-photo" src="http://bluegalaxy.info/images/sea_captain.jpg">
+                    <img class="member-photo"
+                        [src]="member.imageUrl ? (member.imageUrl + readSASToken) : 'http://bluegalaxy.info/images/sea_captain.jpg'"
+                        style="object-fit: cover;">
                     <div class="small-label mt-1">{{member.truncatedName}}</div>
                     <div class="smallest-opacity-label">{{member.role}}</div>
                 </div>
@@ -29,7 +31,8 @@
         </div>
         <ng-container *ngFor="let helper of (homeOwner$ | async)?.households" class="daily-helper d-flex p-2">
             <div class="daily-helper d-flex p-2" *ngIf="helper.type === 'DAILY_HELP'">
-                <img class="member-photo me-3" src="{{'http://bluegalaxy.info/images/sea_captain.jpg'}}">
+                <img class="member-photo me-3"
+                    [src]="helper.imageUrl ? (helper.imageUrl + readSASToken) : 'http://bluegalaxy.info/images/sea_captain.jpg'">
                 <span class="flex-grow-1 justify-content-center d-flex flex-column">
                     <div class="sub-heading-label">{{helper.name}}</div>
                     <div class="sub-label">{{helper.role}}</div>
@@ -48,7 +51,8 @@
             <div class="d-flex flex-wrap justify-content-start  gap-3">
                 <ng-container *ngFor="let member of (homeOwner$ | async)?.households">
                     <div class="p-1 d-flex flex-column align-items-center" *ngIf="member.type === 'FREQUENT_VISITOR'">
-                        <img class="member-photo" src="http://bluegalaxy.info/images/sea_captain.jpg">
+                        <img class="member-photo"
+                            [src]="member.imageUrl ? (member.imageUrl + readSASToken) : 'http://bluegalaxy.info/images/sea_captain.jpg'">
                         <div class="small-label mt-1">{{member.truncatedName}}</div>
                         <div class="smallest-opacity-label">{{member.role}}</div>
                     </div>
